--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,6 +12,9 @@ install_dependencies:
   stage: build
   script:
     - npm install
+  before_script:
+    - cp /etc/gitlab-runner/certs/ca.crt /usr/local/share/ca-certificates/ca.crt
+    - update ca-certificates
   artifacts:
     paths:
       - node_modules/
