--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,6 +13,7 @@ install_dependencies:
   script:
     - npm install
   before_script:
+    - git config --global http.sslVerify false
     - cp /etc/gitlab-runner/certs/ca.crt /usr/local/share/ca-certificates/ca.crt
     - update ca-certificates
   artifacts:
