Create errors database and refactoring part 1

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,11 +8,15 @@ cache:
   paths:
     - node_modules/
 
+variables:
+  MYSQL_ROOT_PASSWORD: RootPassword
+  MYSQL_USER: bester_intranet_user
+  MYSQL_PASSWORD: bester_intranet_secret
+  MYSQL_DATABASE: BesterIntranet_dev
+  DB_HOST: mysql
+
 mysql_build:
   stage: build
-  variables:
-    MYSQL_DATABASE: BesterIntranet_dev
-    MYSQL_ROOT_PASSWORD: RootPassword
   services:
     - mysql
   image: mysql:latest
@@ -34,12 +38,12 @@ testing:
     DB_HOST: mysql
     DB_PORT: 3306
     DB_DATABASE: BesterIntranet_dev
-    DB_USER: root
-    DB_PASS: RootPassword
-    DB_USER_MODIFY: root
-    DB_PASS_MODIFY: RootPassword
-    DB_USER_DELETE: root
-    DB_PASS_DELETE: RootPassword
+    DB_USER: bester_intranet_user
+    DB_PASS: bester_intranet_secret
+    DB_USER_MODIFY: bester_intranet_user
+    DB_PASS_MODIFY: bester_intranet_secret
+    DB_USER_DELETE: bester_intranet_user
+    DB_PASS_DELETE: bester_intranet_secret
     PEPPER: 1DUHLczT
     SECRET_1: 5B7071A1AB5D3BD5B16C377A868B04742B254139B6DAFA42D4170F9E0382DF4E
     SECRET_2: 588AADAF6C20647B58E72C36DBA60F2C86981C0B526D6BB8526F126432FFA731
