--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "multiparty": "^4.2.1",
     "mysql": "^2.17.1",
     "pug": "^2.0.4",
+    "sanitize": "^2.1.0",
     "showdown": "^1.9.0"
   },
   "devDependencies": {},
