--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "helmet": "^3.21.0",
     "jest": "^24.9.0",
     "jsdom": "^15.1.1",
+    "jsonwebtoken": "^8.5.1",
+    "jwks-rsa": "^1.8.0",
     "less": "^3.11.3",
     "less-middleware": "^3.1.0",
     "match-all": "^1.2.5",
