--- a/package.json
+++ b/package.json
@@ -6,20 +6,20 @@
   "dependencies": {
     "argon2": "^0.24.1",
     "connect": "^3.7.0",
-    "cookie-parser": "^1.4.4",
+    "cookie-parser": "^1.4.5",
     "datejs": "^1.0.0-rc3",
     "express": "^4.17.1",
     "glob": "^7.1.4",
-    "helmet": "^3.21.0",
+    "helmet": "^3.23.1",
     "jest": "^24.9.0",
     "jsdom": "^15.1.1",
     "jsonwebtoken": "^8.5.1",
-    "jwks-rsa": "^1.8.0",
+    "jwks-rsa": "^1.8.1",
     "less": "^3.11.3",
     "less-middleware": "^3.1.0",
     "match-all": "^1.2.5",
     "multiparty": "^4.2.1",
-    "mysql": "^2.17.1",
+    "mysql": "^2.18.1",
     "pug": "^2.0.4",
     "redis": "^3.0.2",
     "sanitize": "^2.1.0",
@@ -36,5 +36,5 @@
     "url": "https://gitlab.ryanbester.com/ryan/bester-intranet"
   },
   "author": "Ryan Bester",
-  "license": "ISC"
+  "license": "GPL-3.0-or-later"
 }
