--- a/package.json
+++ b/package.json
@@ -25,11 +25,15 @@
     "sanitize": "^2.1.0",
     "showdown": "^1.9.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "istanbul": "^0.4.5",
+    "nyc": "^15.1.0"
+  },
   "scripts": {
     "start": "node app.js",
-    "test": "jest --passWithNoTests",
-    "test:coverage": "jest --passWithNoTests --coverage"
+    "test": "mocha --require test/env --check-leaks test/tests.js",
+    "coverage": "nyc --reporter=html mocha --require test/env --check-leaks test/tests.js"
   },
   "repository": {
     "type": "git",
