--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: node_js
 dist: "xenial"
-before_install: "npm install -g jshint"
+before_install: "npm install -g jshint && npm install -g mocha && npm install"
 node_js:
   - "12.18.0"
 env:
